# simpler_codex

./: README.md  pyproject.toml  script.ps1  setup.py
simpler_codex/: cli.py
